--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -155,7 +155,7 @@
     <string name="text_assets_manager_content">新建和修改資產賬戶</string>
     <string name="text_title_symbol">貨幣符號</string>
     <string name="text_set_symbol">選擇貨幣符號</string>
-    <string name="text_content_symbol">只改變貨號，不轉換匯率</string>
+    <string name="text_content_symbol">只改變符號，不轉換匯率</string>
     <string name="text_setting_type_manage">收支類型管理</string>
     <string name="text_setting_type_manage_content">添加、修改和排序</string>
     <string name="text_fast_accounting">快速記帳</string>
