--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -243,7 +243,7 @@
     <string name="text_about">about</string>
     <string name="text_slogan">Simple, pure accounting application</string>
     <string name="text_about_Introduction">Introduction</string>
-    <string name="text_about_detail">　　A lightweight billing tool.\n\n　　This is my first work of heart, which originated from an "unbelievable" from small to large (where the money was spent), especially after work. So "the bookkeeping" was born, the purpose is to let everyone in the simplest and direct way to keep accounts, so that this "unbelievable" is no longer incredible, and slowly establish good consumption habits.\n\n　　There are no unnecessary permissions, no advertisements, no user system, no information stored by the user, just a simple record of revenue and expenditure.\n\n　　The name "ThatMoney" is taken from the homonym of a person's name "Na".</string>
+    <string name="text_about_detail">　　A lightweight billing tool.\n\n　　This is my first work of heart, which originated from an \"unbelievable\" from small to large (where the money was spent), especially after work. So \"the bookkeeping\" was born, the purpose is to let everyone in the simplest and direct way to keep accounts, so that this \"unbelievable\" is no longer incredible, and slowly establish good consumption habits.\n\n　　There are no unnecessary permissions, no advertisements, no user system, no information stored by the user, just a simple record of revenue and expenditure.\n\n　　The name \"ThatMoney\" is taken from the homonym of a person\'s name \"Na\".</string>
     <string name="text_dev_designer">Developer &amp; Designer</string>
     <string name="text_designer">Designer</string>
     <string name="text_launcher_designer">Launcher icon design</string>
