--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -148,20 +148,20 @@
     <string name="text_setting">setting</string>
     <string name="text_money">Bookkeeping</string>
     <string name="text_no_setting">no data</string>
-    <string name="text_monty_budget">Monthly budget</string>
+    <string name="text_monty_budget">Monthly Budget</string>
     <string name="text_set_budget">Set a budget</string>
     <string name="hint_enter_budget">Enter a budget</string>
     <string name="hint_enter_assets">Enter assets</string>
     <string name="text_assets_manager">Asset Management</string>
     <string name="text_assets_manager_content">Create and modify asset accounts</string>
-    <string name="text_title_symbol">currency symbol</string>
+    <string name="text_title_symbol">Currency Symbol</string>
     <string name="text_set_symbol">Select currency symbol</string>
     <string name="text_content_symbol">Only change the item number, do not convert the exchange rate</string>
-    <string name="text_setting_type_manage">type management</string>
+    <string name="text_setting_type_manage">Type Management</string>
     <string name="text_setting_type_manage_content">Add, modify, and sort</string>
-    <string name="text_fast_accounting">Quick accounting</string>
+    <string name="text_fast_accounting">Quick Accounting</string>
     <string name="text_fast_tip">Open APP directly bookkeeping</string>
-    <string name="text_successive_record">Continuous accounting</string>
+    <string name="text_successive_record">Continuous Accounting</string>
     <string name="text_successive_record_tip">Tip:Long press home add button, continuous accounting</string>
     <string name="text_manager">Manager</string>
     <string name="text_backup">Backup</string>
@@ -242,7 +242,7 @@
     </string-array>
 
     <!-- 关于 -->
-    <string name="text_about">about</string>
+    <string name="text_about">About</string>
     <string name="text_slogan">Simple, pure accounting application</string>
     <string name="text_about_Introduction">Introduction</string>
     <string name="text_about_detail">　　A lightweight billing tool.\n\n　　This is my first work of heart, which originated from an \"unbelievable\" from small to large (where the money was spent), especially after work. So \"the bookkeeping\" was born, the purpose is to let everyone in the simplest and direct way to keep accounts, so that this \"unbelievable\" is no longer incredible, and slowly establish good consumption habits.\n\n　　There are no unnecessary permissions, no advertisements, no user system, no information stored by the user, just a simple record of revenue and expenditure.\n\n　　The name \"ThatMoney\" is taken from the homonym of a person\'s name \"Na\".</string>
@@ -250,22 +250,22 @@
     <string name="text_designer">Designer</string>
     <string name="text_launcher_designer">Launcher icon design</string>
     <string name="text_developer_designer">Developer &amp; Designer</string>
-    <string name="text_links">more</string>
+    <string name="text_links">Links</string>
     <string name="text_score">score</string>
     <string name="text_donate">Donate</string>
-    <string name="text_contact_author" formatted="true">Join QQ group: %1$s \n\n Join Telegram group: %2$s \n\nContact author: %3$s \n\nmore help:%4$s \n\nThis application is open source and welcome to contribute code.\nOpen source Url:%5$s\n\n*Comply to "Convention of Green Apps for Android"\n %6$s</string>
+    <string name="text_contact_author" formatted="true">Join Telegram group: %2$s \nContact author: %3$s \nOpen source Url:%5$s\n\n*Comply to "Convention of Green Apps for Android"\n %6$s</string>
     <string name="text_license">Open source license</string>
     <string name="text_privacy_policy">Privacy Policy</string>
     <string name="text_display">Display</string>
     <string name="text_theme">Theme</string>
     <string name="text_theme_dark">Dark theme</string>
     <string name="text_theme_light">Light theme</string>
-    <string name="text_luck">Luck screen</string>
-    <string name="text_luck_screen">Must be unlocked when opening an app</string>
+    <string name="text_lock">Lock Screen</string>
+    <string name="text_luck_screen">Lock Screen Mode</string>
     <string name="text_luck_screen_off">Turn-off</string>
     <string name="text_luck_screen_system">Use the system to unlock the interface</string>
     <string name="text_luck_screen_custom">Use a custom unlock interface</string>
-    <string name="text_luck_screen_add">Directly enter the "Record"</string>
+    <string name="text_luck_screen_add">Exclude</string>
     <string name="text_luck_screen_add_tip">Tip: Enter or open Quick Accounting from Shortcut without unlocking</string>
     <string name="text_statement">Statement</string>
     <string name="text_statement_tip">"ThatMoney" is open source software. The market that I compiled on the market is currently only Coolapk.com and Google Play. The package name is me.bakumon.moneykeeper. The very similar application in other markets may be the version modified by others after obtaining the source code.</string>
