--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -253,14 +253,14 @@
     <string name="text_links">更多</string>
     <string name="text_score">評分</string>
     <string name="text_donate">捐贈作者</string>
-    <string name="text_contact_author" formatted="true">加入我們的 QQ 交流群： %1$s \n\n加入我們的 Telegram 交流群： %2$s \n\n聯繫作者： %3$s \n\n更多幫助：%4$s \n\n本應用已開源，歡迎貢獻代碼。\n開源地址：%5$s\n\n*本應用遵循《Android綠色應用公約》\n %6$s</string>
+    <string name="text_contact_author" formatted="true">加入我們的 Telegram 交流群： %2$s \n聯繫作者： %3$s \n更新日誌：%4$s \n開源地址：%5$s\n\n*本應用遵循《Android綠色應用公約》\n %6$s</string>
     <string name="text_license">開源許可證</string>
     <string name="text_privacy_policy">隱私政策</string>
     <string name="text_display">外觀</string>
     <string name="text_theme">主題</string>
     <string name="text_theme_dark">暗色主題</string>
     <string name="text_theme_light">亮色主題</string>
-    <string name="text_luck">鎖屏</string>
+    <string name="text_lock">鎖屏</string>
     <string name="text_luck_screen">打開應用時鎖屏</string>
     <string name="text_luck_screen_off">關閉</string>
     <string name="text_luck_screen_system">使用系統解鎖界面</string>
