--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -253,7 +253,7 @@
     <string name="text_links">更多</string>
     <string name="text_score">評分</string>
     <string name="text_donate">捐贈作者</string>
-    <string name="text_contact_author" formatted="true">加入 Telegram 交流群： %2$s \n聯繫作者： %3$s \n更新日誌：%4$s \n開源地址：%5$s\n\n*本應用遵循《Android綠色應用公約》\n %6$s</string>
+    <string name="text_contact_author" formatted="true">Telegram 交流群： %2$s \n聯繫作者： %3$s \n更新日誌：%4$s \n開源地址：%5$s\n\n*本應用遵循《Android綠色應用公約》\n %6$s</string>
     <string name="text_license">開源許可證</string>
     <string name="text_privacy_policy">隱私政策</string>
     <string name="text_display">外觀</string>
