--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -253,7 +253,7 @@
     <string name="text_links">链接</string>
     <string name="text_score">评分</string>
     <string name="text_donate">捐赠作者</string>
-    <string name="text_contact_author" formatted="true">加入 QQ 交流群： %1$s \n加入 Telegram 交流群： %2$s \n联系作者： %3$s \n更新记录：%4$s \n开源地址：%5$s\n\n*本应用遵循《Android绿色应用公约》\n %6$s</string>
+    <string name="text_contact_author" formatted="true">QQ 交流群： %1$s \nTelegram 交流群： %2$s \n联系作者： %3$s \n更新记录：%4$s \n开源地址：%5$s\n\n*本应用遵循《Android绿色应用公约》\n %6$s</string>
     <string name="text_license">开源许可证</string>
     <string name="text_privacy_policy">隐私政策</string>
     <string name="text_display">外观</string>
