--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -253,6 +253,7 @@
     <string name="text_links">更多</string>
     <string name="text_score">評分</string>
     <string name="text_donate">捐贈作者</string>
+    <string name="text_donate_content">感謝您的捐贈。這將給予我無限的動力，使【那樣記賬】app 越來越好。 \n\n注意：捐贈不會直接增加額外的功能。</string>
     <string name="text_contact_author" formatted="true">Telegram 交流群： %2$s \n聯繫作者： %3$s \n更新日誌：%4$s \n開源地址：%5$s\n\n*本應用遵循《Android綠色應用公約》\n %6$s</string>
     <string name="text_license">開源許可證</string>
     <string name="text_privacy_policy">隱私政策</string>
