--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,6 +16,8 @@
 
 <resources>
     <string name="app_name">ThatMoney</string>
+    <!-- 测试是否是简体中文环境 -->
+    <string name="text_zh">Simplified Chinese</string>
 
     <string name="toast_add_record_fail">Billing failed, please try again</string>
     <string name="toast_modify_record_fail">Failed to modify the record</string>
@@ -259,7 +261,6 @@
     <string name="text_developer_designer">Developer &amp; Designer</string>
     <string name="text_links">Links</string>
     <string name="text_score">score</string>
-    <string name="text_donate">Donate</string>
     <string name="text_donate_content">Thank you for your donation. This will give me unlimited motivation to make the [ThatMoney] app better and better. \n\nNote: Donations do not directly add additional features.</string>
     <string name="text_contact_author" formatted="true">Telegram Group: %2$s \nContact author: %3$s \nOpen source Url:%5$s\n\n*Comply to "Convention of Green Apps for Android"\n %6$s</string>
     <string name="text_license">Open source license</string>
