--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -167,6 +167,7 @@
     <string name="text_successive_record">Continuous Accounting</string>
     <string name="text_successive_record_tip">Tip:Long press home add button, continuous accounting</string>
     <string name="text_lock_record">Lock Record</string>
+    <string name="text_last_asset">Record the last used asset</string>
     <string name="text_lock_record_off">Records can be edited and deleted</string>
     <string name="text_lock_record_on">Records cannot be edited or deleted</string>
     <string name="text_manager">Manager</string>
@@ -249,6 +250,16 @@
         <item>off</item>
         <item>openApp</item>
         <item>quitApp</item>
+    </string-array>
+
+    <string-array name="last_asset_titles">
+        <item>Record only one unified asset account</item>
+        <item>Record asset accounts by record type</item>
+    </string-array>
+
+    <string-array name="last_asset_values">
+        <item>onlyOne</item>
+        <item>byType</item>
     </string-array>
 
     <!-- 关于 -->
