--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -167,6 +167,7 @@
     <string name="text_successive_record">連續記賬</string>
     <string name="text_successive_record_tip">提示：長按首頁添加按鈕，連續記賬</string>
     <string name="text_lock_record">鎖定記錄</string>
+    <string name="text_last_asset">記錄上次使用的資產賬戶</string>
     <string name="text_lock_record_off">記錄可以編輯、刪除</string>
     <string name="text_lock_record_on">記錄不可以編輯、刪除</string>
     <string name="text_manager">管理</string>
@@ -249,6 +250,16 @@
         <item>off</item>
         <item>openApp</item>
         <item>quitApp</item>
+    </string-array>
+
+    <string-array name="last_asset_titles">
+        <item>只記錄一個統一的資產賬戶</item>
+        <item>按分類記錄資產賬戶</item>
+    </string-array>
+
+    <string-array name="last_asset_values">
+        <item>onlyOne</item>
+        <item>byType</item>
     </string-array>
 
     <!-- 关于 -->
