--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
   -->
 
 <resources>
-    <string name="app_name">那样记账</string>
+    <!--<string name="app_name">那样记账</string>-->
     <!-- 测试是否是简体中文环境 -->
     <string name="text_zh">简体字</string>
 
