--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -168,6 +168,8 @@
     <string name="text_successive_record_tip">提示：長按首頁添加按鈕，連續記賬</string>
     <string name="text_lock_record">鎖定記錄</string>
     <string name="text_last_asset">記錄上次使用的資產賬戶</string>
+    <string name="text_custom">個性化</string>
+    <string name="text_start_day_of_month">月起始日</string>
     <string name="text_lock_record_off">記錄可以編輯、刪除</string>
     <string name="text_lock_record_on">記錄不可以編輯、刪除</string>
     <string name="text_manager">管理</string>
